--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <header class="grid grid-middle masthead">
-    <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-4">
-      <h1 class="push-0 unit-s-center">Solar System</h1>
+  <header class="grid grid-middle">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
+      <h1 class="push-1-4 unit-s-center pad-t-1-2 peta gutter-1-2">Solar System</h1>
     </div>
-    <nav class="unit unit-xs-1 unit-xs-center unit-s-1-2 unit-l-3-4">
-      <ul class="unit unit-push-m-3-4 push-0 unit-s-center">
-        <li><a href="#">Planets</a></li>
-        <li><a href="#">Moons</a></li>
+    <nav class="unit xs-1 s-2-3 l-2-3">
+      <ul class="pad-b-1-2 push-0 pad-t-1-2">
+        <li><a class="island-1-2 giga" href="#">Planets</a></li>
+        <li><a class="island-1-2 giga" href="#">Moons</a></li>
         <li><a href="#">Exploration</a></li>
       </ul>
     </nav>
